--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "node-sass": "^7.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-transition-group": "^4.4.2",
+    "sass": "^1.54.0",
     "svg2react-icon": "^3.1.178",
     "web-vitals": "^2.1.4"
   },
@@ -20,7 +23,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "generate-svg-icons" : "svg2react-icon ./public/icons ./src/svg"
+    "generate-svg-icons": "svg2react-icon ./public/icons ./src/svg"
   },
   "eslintConfig": {
     "extends": [
