--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.27.2",
     "node-sass": "^7.0.1",
     "react": "^18.2.0",
+    "react-collapsed": "^3.3.2",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
     "react-router": "^6.3.0",
