--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-REACT_APP_API_URL="http://localhost:8080/api/"
+REACT_APP_LIVE_API_URL="https://plus-fit-api.herokuapp.com/api"
+REACT_APP_LOCAL_API_URL="http://localhost:8080/api/"
