--- a/package.json
+++ b/package.json
@@ -25,9 +25,9 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "NODE_ENV=prod node --max_old_space_size=2560 node_modules/.bin/react-scripts start",
+    "start": "NODE_ENV=prod react-scripts start",
     "dev": "NODE_ENV=dev react-scripts start",
-    "build": "NODE_ENV=prod node --max_old_space_size=2560 node_modules/.bin/react-scripts build",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "generate-svg-icons": "svg2react-icon  ./public/icons ./src/svg"
